- Acceptable interval can be specified for number options
- Method for parsing time periods / intervals from config
- Method for retrieving integer settings from config
- It is now easy for modules to expose a Prosody shell command, by adding a shell-command item
- Modules can now implement a module.ready method which will be called after server initialization

### Configuration

- The configuration file now supports referring and appending to options previously set
- Direct usage of the Lua API in the config file is deprecated, but can now be accessed via Lua.* instead
- Convenience functions for reading values from files, with variant meant for credentials or secrets

## Changes

- Support sub-second precision timestamps
- mod_blocklist: New option 'migrate_legacy_blocking' to disable migration from mod_privacy
- Moved all modules into the Lua namespace `prosody.`
- Forwarded header from RFC 7239 supported, disabled by default
- mod_http_file_share now uses roles framework, affecting access from e.g. components
- Intervals of mod_cron managed periodic jobs made configurable
- When mod_smacks is enabled, s2s connections not responding to ack requests are closed.
- Arguments to `prosodyctl shell` that start with ':' are now turned into method calls
- Support for Type=notify and notify-reload systemd service type added
- Support for the roster *group* access_model in mod_pep
- Support for systemd socket activation in server_epoll
- mod_invites_adhoc gained a command for creating password resets
- mod_cloud_notify imported from community modules for push notification support
- mod_http_altconnect imported from community modules, simplifying web clients

## Removed

- Lua 5.1 support
- XEP-0090 support removed from mod_time
- util.rfc6724

0.12.0
======

**2022-03-14**

## New

### Modules

-   mod_mimicking: Prevent address spoofing
-   mod_s2s_bidi: Bi-directional server-to-server (XEP-0288)
-   mod_external_services: generic XEP-0215 support